2004-11-23  Bradley Bell  <btb@icculus.org>

	* debian/control: depend on libsdl1.2-dev instead of libsdl-dev

2004-11-22  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/include/joy.h, arch/linux/joydefs.c,
	arch/linux/joystick.c, arch/linux/include/joystick.h,
	arch/sdl/joy.c, main/kconfig.c: Fix sdl joystick axis problem, all
	arch use global variable joy_num_axes

2004-11-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamemine.c, main/piggy.c: compile again on older C compilers
	* main/polyobj.c: don't corrupt model_data, so it can be freed properly
	* main/gameseq.c, main/mission.c, main/mission.h: for enhanced (like
	Vertigo) missions, load add-on ham file at every load, not only the 1st
	* main/bm.ch: fix bug where loading a hxm would affect other levels too
	* main/fireball.c: don't Int3() every time explosions don't look best

2004-11-16  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/findfile.c: fix Mac OS 9 bug with missions > 12 chars

2004-11-14  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/ogl.c: make Mac OS 9 Voodoo display textures
	* arch/ogl/ogl.c: make Mac OS X OpenGL verify textures

2004-10-30  Martin Schaffner  <maschaffner@gmx.ch>

	* main/gamemine.c, main/piggy.c: read descent 1 textures also from
	shareware version of descent.hog. This is not yet bug-free

2004-10-30  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/network.c: fix crash introduced with previous change

2004-10-24  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gameseq.c, main/gameseq.h, main/mission.c, main/mission.h,
	main/titles.c, main/titles.h: move all mission stuff to mission.{c,h},
	make mission structre memory allocated

2004-10-23  Martin Schaffner  <maschaffner@gmx.ch>

	* main/Makefile.am, main/inferno.c, main/credits.c, main/endlevel.c,
	main/bmread.c, main/titles.c, main/compbit.h, main/text.c,main/text.h,
	VisualC/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp, VisualCE/d2x/d2x.vcp: