@@ -1,3 +1,8 @@
+2004-11-25    <btb@icculus.org>
+
+	* 2d/font.c: get rid of clipping in ogl_internal_string, causes
+	garbage on windows for some reason.
+
 2004-11-23  Bradley Bell  <btb@icculus.org>
 
 	* debian/control: depend on libsdl1.2-dev instead of libsdl-dev
